# src/routes.ts
@@ -11,14 +11,18 @@ export type APIRoutes =
 | { method: 'get', path: `/streams/${string}/bans`, parts: 3, params: undefined, response: paths['/streams/{path}/bans']['get']['responses']['200']['content']['application/json'] }
 | { method: 'get', path: '-/streams/{path}/bans', parts: 3, params: undefined, response: paths['/streams/{path}/bans']['get']['responses']['200']['content']['application/json'] }
 | { method: 'post', path: `/streams/reset_token`, parts: 2, params: undefined, response: paths['/streams/reset_token']['post']['responses']['200']['content']['application/json'] }
-| { method: 'put', path: `/streams/${string}/bans/${string}`, parts: 4, params: paths['/streams/{target}/bans/{id}']['put']['requestBody']['content']['application/json'], response: paths['/streams/{target}/bans/{id}']['put']['responses']['200']['content']['application/json'] }
-| { method: 'put', path: '-/streams/{target}/bans/{id}', parts: 4, params: paths['/streams/{target}/bans/{id}']['put']['requestBody']['content']['application/json'], response: paths['/streams/{target}/bans/{id}']['put']['responses']['200']['content']['application/json'] }
+| { method: 'put', path: `/streams/${string}/bans/${string}`, parts: 4, params: paths['/streams/{stream_id}/bans/{user_id}']['put']['requestBody']['content']['application/json'], response: paths['/streams/{stream_id}/bans/{user_id}']['put']['responses']['200']['content']['application/json'] }
+| { method: 'put', path: '-/streams/{stream_id}/bans/{user_id}', parts: 4, params: paths['/streams/{stream_id}/bans/{user_id}']['put']['requestBody']['content']['application/json'], response: paths['/streams/{stream_id}/bans/{user_id}']['put']['responses']['200']['content']['application/json'] }
 | { method: 'delete', path: `/streams/${string}/bans/${string}`, parts: 4, params: undefined, response: undefined }
 | { method: 'delete', path: '-/streams/{target}/bans/{id}', parts: 4, params: undefined, response: undefined }
 | { method: 'put', path: `/streams/${string}/follow`, parts: 3, params: undefined, response: undefined }
 | { method: 'put', path: '-/streams/{target}/follow', parts: 3, params: undefined, response: undefined }
 | { method: 'delete', path: `/streams/${string}/follow`, parts: 3, params: undefined, response: undefined }
 | { method: 'delete', path: '-/streams/{target}/follow', parts: 3, params: undefined, response: undefined }
+| { method: 'put', path: `/streams/${string}/mods/${string}`, parts: 4, params: undefined, response: undefined }
+| { method: 'put', path: '-/streams/{stream_id}/mods/{user_id}', parts: 4, params: undefined, response: undefined }
+| { method: 'delete', path: `/streams/${string}/mods/${string}`, parts: 4, params: undefined, response: undefined }
+| { method: 'delete', path: '-/streams/{stream_id}/mods/{user_id}', parts: 4, params: undefined, response: undefined }
 | { method: 'get', path: `/users/@me`, parts: 2, params: undefined, response: paths['/users/@me']['get']['responses']['200']['content']['application/json'] }
 | { method: 'put', path: `/users/@me`, parts: 2, params: paths['/users/@me']['put']['requestBody']['content']['application/json'], response: paths['/users/@me']['put']['responses']['200']['content']['application/json'] }
 | { method: 'patch', path: `/users/@me`, parts: 2, params: paths['/users/@me']['patch']['requestBody']['content']['application/json'], response: paths['/users/@me']['patch']['responses']['200']['content']['application/json'] }
